--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "vanta": "^0.5.24",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
