--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "animate.css": "^4.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "vanta": "^0.5.24",
