--- a/angular.json
+++ b/angular.json
@@ -33,9 +33,7 @@
               "node_modules/animate.css/animate.min.css",
               "src/styles.scss"
             ],
-            "scripts": [
-              "node_modules/vanta/src/vanta.globe.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
