--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.2.0",
     "animate.css": "^4.1.1",
     "rxjs": "~7.8.0",
+    "three": "^0.156.1",
     "tslib": "^2.3.0",
     "vanta": "^0.5.24",
     "zone.js": "~0.13.0"
