feat:test-fullpage

--- a/angular.json
+++ b/angular.json
@@ -94,9 +94,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/fullpage.js/dist/fullpage.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/fullpage.js/dist/fullpage.js"
+            ]
           }
         }
       }
